--- a/css/style.css
+++ b/css/style.css
@@ -10,84 +10,35 @@ a {
 /*GRADIENTS*/
 /*FONTS*/
 /*MAPS*/
-@-webkit-keyframes wiggle {
-  0% {
-    -webkit-transform: translate(0);
-            transform: translate(0);
-  }
-  20% {
-    -webkit-transform: translate(1px, 1px);
-            transform: translate(1px, 1px);
-  }
-  40% {
-    -webkit-transform: translate(1px, -1px);
-            transform: translate(1px, -1px);
-  }
-  60% {
-    -webkit-transform: translate(-1px, -1px);
-            transform: translate(-1px, -1px);
-  }
-  80% {
-    -webkit-transform: translate(-1px, 1px);
-            transform: translate(-1px, 1px);
-  }
-  100% {
-    -webkit-transform: translate(0);
-            transform: translate(0);
-  }
-}
 @keyframes wiggle {
   0% {
-    -webkit-transform: translate(0);
-            transform: translate(0);
+    transform: translate(0);
   }
   20% {
-    -webkit-transform: translate(1px, 1px);
-            transform: translate(1px, 1px);
+    transform: translate(1px, 1px);
   }
   40% {
-    -webkit-transform: translate(1px, -1px);
-            transform: translate(1px, -1px);
+    transform: translate(1px, -1px);
   }
   60% {
-    -webkit-transform: translate(-1px, -1px);
-            transform: translate(-1px, -1px);
+    transform: translate(-1px, -1px);
   }
   80% {
-    -webkit-transform: translate(-1px, 1px);
-            transform: translate(-1px, 1px);
+    transform: translate(-1px, 1px);
   }
   100% {
-    -webkit-transform: translate(0);
-            transform: translate(0);
-  }
-}
-@-webkit-keyframes dots-jump {
-  25% {
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  65% {
-    -webkit-transform: translateY(-25%);
-            transform: translateY(-25%);
-  }
-  0%, 10%, 50%, 90%, 100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translate(0);
   }
 }
 @keyframes dots-jump {
   25% {
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
+    transform: translateY(-50%);
   }
   65% {
-    -webkit-transform: translateY(-25%);
-            transform: translateY(-25%);
+    transform: translateY(-25%);
   }
   0%, 10%, 50%, 90%, 100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 body {
@@ -118,15 +69,10 @@ header h1 {
 main {
   max-width: 1200px;
   margin: 0 auto;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-flow: row wrap;
-  -webkit-box-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-          align-items: center;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
   align-content: space-between;
   padding: 80px;
   margin-bottom: 140px;
@@ -138,10 +84,8 @@ section {
 
 #prochainement {
   width: 100%;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .block-prochainement {
@@ -152,6 +96,8 @@ section {
   font: normal normal 600 1.6rem/60px "Montserrat", sans-serif;
   text-align: center;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .block-menu {
@@ -178,31 +124,26 @@ section {
   margin: 20px 0;
 }
 .block-menu__heading--var1 {
-  font-family: "Zhi Mang Xing", cursive;
+  font-family: "Damion", cursive;
   color: #3c1218;
 }
 .block-menu__heading--var2 {
   font-family: "Yeseva One", serif;
   background: linear-gradient(135deg, #d8852e 0%, #905bfd 100%);
   -webkit-background-clip: text;
-  background-clip: text;
   color: transparent;
   font-size: 2.2rem;
 }
 .block-menu__heading--var3 {
   font-family: "Dancing Script", cursive;
-  background: -webkit-gradient(linear, left top, right top, from(#2140df), to(#1b91fa));
   background: linear-gradient(90deg, #2140df 0%, #1b91fa 100%);
   -webkit-background-clip: text;
-  background-clip: text;
   color: transparent;
 }
 .block-menu__heading--var4 {
   font-family: "Kaushan Script", cursive;
-  background: -webkit-gradient(linear, left top, right top, from(#3d9339), to(#bfff7e));
   background: linear-gradient(90deg, #3d9339 0%, #bfff7e 100%);
   -webkit-background-clip: text;
-  background-clip: text;
   color: transparent;
 }
 .block-menu__headingSec {
@@ -230,31 +171,23 @@ section {
 }
 
 .block-item {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   align-content: center;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 460px;
   height: 700px;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 .block-item:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
   opacity: 0.5;
 }
 
 .fas.fa-music {
   background: linear-gradient(135deg, #d8852e 0%, #905bfd 100%);
   color: transparent;
-  background-clip: text;
   -webkit-background-clip: text;
   font-size: 4rem;
   margin: 0 auto;
@@ -275,11 +208,8 @@ main h1 {
 .menu {
   width: 90%;
   height: 1200px;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   padding: 50px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
 }
@@ -291,12 +221,9 @@ main h1 {
 
 .menu-second-heading {
   width: 100%;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 .menu-second-heading h3 {
   display: block;
@@ -311,20 +238,13 @@ main h1 {
   bottom: 0px;
   left: 0px;
   height: 1px;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: -webkit-transform 0.6s ease-in-out;
+  transform: scaleX(0);
   transition: transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
-  -webkit-transform-origin: left;
-          transform-origin: left;
+  transform-origin: left;
 }
 .menu-second-heading h3:hover::after {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  -webkit-transform-origin: left;
-          transform-origin: left;
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .menu-list {
@@ -334,13 +254,10 @@ main h1 {
 .menu-list-element {
   width: 100%;
   font: normal normal 500 1.6rem/100% "Caveat", cursive;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   height: 50px;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 /*NOTE ENCHANTEE*/
@@ -353,8 +270,7 @@ main h1 {
 }
 .menu--note .menu-second-heading::before, .menu--note .menu-second-heading::after {
   content: "";
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   height: 4px;
   background-color: #3c1218;
 }
@@ -375,17 +291,14 @@ main h1 {
 }
 .menu--chic .menu-second-heading::before, .menu--chic .menu-second-heading::after {
   content: "";
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   height: 5px;
 }
 .menu--chic .menu-second-heading::after {
-  -webkit-clip-path: polygon(15% 0, 100% 50%, 15% 100%, 0% 50%);
-          clip-path: polygon(15% 0, 100% 50%, 15% 100%, 0% 50%);
+  clip-path: polygon(15% 0, 100% 50%, 15% 100%, 0% 50%);
 }
 .menu--chic .menu-second-heading::before {
-  -webkit-clip-path: polygon(85% 0, 100% 50%, 85% 100%, 0% 50%);
-          clip-path: polygon(85% 0, 100% 50%, 85% 100%, 0% 50%);
+  clip-path: polygon(85% 0, 100% 50%, 85% 100%, 0% 50%);
 }
 .menu--chic .menu-second-heading.menu-second-heading--var1, .menu--chic .menu-second-heading .menu-second-heading--var1 h3 {
   color: #c77412;
@@ -409,6 +322,9 @@ main h1 {
   color: #6e4ccc;
 }
 .menu--chic .menu-second-heading.menu-second-heading--var3::before, .menu--chic .menu-second-heading.menu-second-heading--var3::after, .menu--chic .menu-second-heading .menu-second-heading--var3 h3::before, .menu--chic .menu-second-heading .menu-second-heading--var3 h3::after {
+  background-color: #6e4ccc;
+}
+.menu--chic .menu-second-heading.menu-second-heading--var3 h3::after, .menu--chic .menu-second-heading .menu-second-heading--var3 h3 h3::after {
   background-color: #6e4ccc;
 }
 .menu--chic .menu-list {
@@ -438,17 +354,14 @@ main h1 {
 }
 .menu--delice .menu-second-heading::before, .menu--delice .menu-second-heading::after {
   content: "";
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   height: 4px;
 }
 .menu--delice .menu-second-heading::before {
-  -webkit-transform: skewX(-30deg);
-          transform: skewX(-30deg);
+  transform: skewX(-30deg);
 }
 .menu--delice .menu-second-heading::after {
-  -webkit-transform: skewX(30deg);
-          transform: skewX(30deg);
+  transform: skewX(30deg);
 }
 .menu--delice .menu-second-heading.menu-second-heading--var1::before, .menu--delice .menu-second-heading.menu-second-heading--var1::after, .menu--delice .menu-second-heading h3::before, .menu--delice .menu-second-heading h3::after {
   background-color: #0887fb;
@@ -477,19 +390,16 @@ main h1 {
 }
 .menu--palette .menu-second-heading::before, .menu--palette .menu-second-heading::after {
   content: "";
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   height: 6px;
 }
 .menu--palette .menu-second-heading::before {
-  background: -webkit-gradient(linear, left top, right top, from(#3d9339), to(#bfff7e));
   background: linear-gradient(90deg, #3d9339 0%, #bfff7e 100%);
 }
 .menu--palette .menu-second-heading::after {
   background: linear-gradient(275deg, #3d9339 0%, #bfff7e 100%);
 }
 .menu--palette .menu-second-heading h3::after {
-  background: -webkit-gradient(linear, left top, right top, from(#3d9339), to(#bfff7e));
   background: linear-gradient(90deg, #3d9339 0%, #bfff7e 100%);
 }
 .menu--palette .menu-list {
@@ -499,36 +409,29 @@ main h1 {
 /*PROCHAINEMENT*/
 .prochainement {
   height: 550px;
-  display: -webkit-box;
   display: flex;
   align-content: center;
 }
 
 .dots-anim {
-  display: -webkit-box;
   display: flex;
-  width: 200px;
-  -webkit-box-pack: space-evenly;
-          justify-content: space-evenly;
+  justify-content: space-evenly;
 }
 
 .dot {
-  font: normal normal 800 6rem/100% sans-serif;
-  color: #579c87;
-  -webkit-animation: dots-jump 1s ease-in-out infinite both;
-          animation: dots-jump 1s ease-in-out infinite both;
+  font: normal normal 600 2rem/60px sans-serif;
+  color: #fdcb46;
+  margin: 0 3px;
+  animation: dots-jump 1s ease-in-out infinite both;
 }
 .dot-1 {
-  -webkit-animation-delay: 100ms;
-          animation-delay: 100ms;
+  animation-delay: 100ms;
 }
 .dot-2 {
-  -webkit-animation-delay: 200ms;
-          animation-delay: 200ms;
+  animation-delay: 200ms;
 }
 .dot-3 {
-  -webkit-animation-delay: 300ms;
-          animation-delay: 300ms;
+  animation-delay: 300ms;
 }
 
 /*FOOTER*/
@@ -539,6 +442,7 @@ footer {
   border-top: 1px solid #a1c181;
   display: -webkit-box;
   display: flex;
+  flex-flow: row wrap;
   -webkit-box-align: center;
   align-items: center;
   -webkit-box-pack: justify;
@@ -553,8 +457,7 @@ footer .links-wiggle {
   display: block;
 }
 footer .links-wiggle:hover {
-  -webkit-animation: wiggle 200ms ease-in-out infinite both;
-          animation: wiggle 200ms ease-in-out infinite both;
+  animation: wiggle 200ms ease-in-out infinite both;
 }
 
 @media screen and (max-width: 768px) {
@@ -568,8 +471,7 @@ footer .links-wiggle:hover {
   main {
     width: 100%;
     padding: 40px;
-    -webkit-box-pack: center;
-            justify-content: center;
+    justify-content: center;
     margin-bottom: 50px;
   }
   main a {
@@ -659,3 +561,5 @@ footer .links-wiggle:hover {
     font-size: 1rem;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
