fix title in links

--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -93,8 +93,6 @@ section {
     font:normal normal 600 1.6rem/60px $font-maintitle;
     text-align:center;
     border-radius:10px;
-    display:flex;
-    justify-content: space-evenly;
 }
 
 
@@ -127,6 +125,7 @@ section {
             font-family:$font-chic;
             background:$grad-orange-violet;
             -webkit-background-clip:text;
+            background-clip:text;
             color:transparent;
             font-size:2.2rem;
         }
@@ -134,12 +133,14 @@ section {
             font-family:$font-delice;
             background:$grad-blue;
             -webkit-background-clip:text;
+            background-clip:text;
             color:transparent;
         }
         &--var4 {
             font-family:$font-palette;
             background:$grad-green;
             -webkit-background-clip:text;
+            background-clip:text;
             color:transparent;
         }
     }
@@ -186,6 +187,7 @@ section {
 .fas.fa-music {
     background:$grad-orange-violet;
     color:transparent;
+    background-clip:text;
     -webkit-background-clip:text;
     font-size:4rem;
     margin: 0 auto;
@@ -331,11 +333,6 @@ main h1 {
             &::before, &::after {
                 background-color:map-get($font-colors, menu2-var3);
             }
-            h3 {
-                &::after {
-                    background-color:map-get($font-colors, menu2-var3);
-                }
-            } 
         }
     }
     .menu-list {
@@ -442,13 +439,13 @@ main h1 {
 
 .dots-anim {
     display:flex;
+    width:200px;
     justify-content:space-evenly;
 }
 
 .dot {
-    font:normal normal 600 2rem/60px sans-serif;
-    color:$yellow-main;
-    margin:0 3px;
+    font:normal normal 800 6rem/100% sans-serif;
+    color:$green-main;
     animation:dots-jump 1s ease-in-out infinite both;
     @for $i from 1 through 3 {
         &-#{$i} {
@@ -468,11 +465,10 @@ footer {
     border-top:1px solid $green-secondary;
     display:-webkit-box;
     display:flex;
-    flex-flow:row wrap;
     -webkit-box-align:center;
-    align-items:center;
+            align-items:center;
     -webkit-box-pack:justify;
-    justify-content:space-between;
+            justify-content:space-between;
     padding:35px;
     position:fixed;
     bottom:0px;
@@ -518,7 +514,6 @@ footer {
     }
     .block-prochainement {
         margin:0 auto;
-
     }
 
 /*PAGES MENUS*/
@@ -597,4 +592,5 @@ footer {
             font-size:1rem;
         }
     }
+
 }
