--- a/Sass/utils/_variables.scss
+++ b/Sass/utils/_variables.scss
@@ -20,7 +20,7 @@ $grad-green-rev: linear-gradient(275deg, rgba(61,147,57,1) 0%, rgba(191,255,126,
 /*FONTS*/
 
 $font-maintitle:'Montserrat', sans-serif;
-$font-note:'Damion', cursive;
+$font-note:'Zhi Mang Xing', cursive;
 $font-secondary:'Caveat', cursive;
 $font-chic:'Yeseva One', serif;
 $font-chic-sec:'Cantata One', serif;
